feat: added POST /api/v1/categories route
