# src/controllers/write/index.js
@@ -3,3 +3,4 @@
 const Write = module.exports;
 
 Write.users = require('./users');
+Write.categories = require('./categories');
